--- a/src/main/resources/application-sit.properties
+++ b/src/main/resources/application-sit.properties
@@ -3,7 +3,7 @@ spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.config.import=aws-secretsmanager:/config/notification
+spring.config.import=aws-secretsmanager:/config/edgp
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
