--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,14 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/notification
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-spring.config.import=aws-secretsmanager:/config/edgp
-spring.cloud.aws.region.static=${AWS_REGION}
-
+#spring.config.import=aws-secretsmanager:/config/edgp
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 server.port=8087
 
-allowed.origin=${ALLOWED_ORIGIN}
+aws.region=ap-southeast-1
+aws.accesskey=${AWS_ACCESS_KEY}
+aws.secretkey=${AWS_SECRET_KEY}
+aws.sqs.queue.audit.url=${AUDIT_SQS_URL}
+aws.ses.from=khinvoucher2@gmail.com
+
+client.url=${CLIENT_URL}
+auth.api.url =${AUTH_URL}
+audit.activity.type.prefix=Org- 
