added audit log service and validating jwt auth header

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ aws.ses.from=khinvoucher2@gmail.com
 client.url=${CLIENT_URL}
 auth.api.url =${AUTH_URL}
 audit.activity.type.prefix=Org- 
+
+jwt.public.key=${JWT_PUBLIC_KEY}
