--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@ aws.sqs.queue.audit.url=${AUDIT_SQS_URL}
 aws.ses.from=khinvoucher2@gmail.com
 
 client.url=${CLIENT_URL}
+client.login.url=${CLIENT_LOGIN_URL}
 auth.api.url =${AUTH_URL}
 audit.activity.type.prefix=Org- 
 
