--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#spring.config.import=aws-secretsmanager:/config/edgp
+spring.config.import=aws-secretsmanager:/config/edgpv2
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 server.port=8087
@@ -7,7 +7,7 @@ aws.region=ap-southeast-1
 aws.accesskey=${AWS_ACCESS_KEY}
 aws.secretkey=${AWS_SECRET_KEY}
 aws.sqs.queue.audit.url=${AUDIT_SQS_URL}
-aws.ses.from=khinvoucher2@gmail.com
+aws.ses.from=donotreply.edgp@gmail.com
 
 client.url=${CLIENT_URL}
 client.login.url=${CLIENT_LOGIN_URL}
