update prefix activity type

--- a/src/main/resources/application-prd.properties
+++ b/src/main/resources/application-prd.properties
@@ -12,6 +12,6 @@ aws.ses.from=donotreply.edgp@gmail.com
 client.url=${CLIENT_URL}
 client.login.url=${CLIENT_LOGIN_URL}
 auth.api.url =${AUTH_URL}
-audit.activity.type.prefix=Org- 
+audit.activity.type.prefix=Notification- 
 
 jwt.public.key=${JWT_PUBLIC_KEY}
