--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -9,4 +9,15 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.cloud.aws.region.static=ap-southeast-1
+aws.region=ap-southeast-1
+aws.accesskey=AAAAAAAAAAA
+aws.secretkey=1Noti
+aws.sqs.queue.audit.url=https://sqs.ap-southeast-1.amazonaws.com/11/NotiMock
+aws.ses.from=donotreply.edgp@gmail.com
+
+client.url=http://localhost:3000
+client.login.url=http://localhost:3000/login
+auth.api.url =http://localhost:8080/mock-auth
+audit.activity.type.prefix=Notification- 
+
+jwt.public.key=bbbb
