--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ aws.sqs.queue.audit.url=${AUDIT_SQS_URL}
 aws.ses.from=donotreply.edgp@gmail.com
 
 client.url=${CLIENT_URL}
-client.login.url=${CLIENT_LOGIN_URL}
+client.initialise.password.url=${CLIENT_INITIALISE_PASSWORD_URL}
 auth.api.url =${AUTH_URL}
 audit.activity.type.prefix=Notification- 
 
