added token in noti request

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -16,7 +16,7 @@ aws.sqs.queue.audit.url=https://sqs.ap-southeast-1.amazonaws.com/11/NotiMock
 aws.ses.from=donotreply.edgp@gmail.com
 
 client.url=http://localhost:3000
-client.initialise.password.url=http://localhost:3000/password
+client.invitation.user.url=http://localhost:3000/invitation
 auth.api.url =http://localhost:8080/mock-auth
 audit.activity.type.prefix=Notification- 
 
