use aws secrect name for prod and sit

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
-spring.config.import=aws-secretsmanager:/config/edgpv2
+spring.config.import=optional:aws-secretsmanager:/config/edgpv2
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 server.port=8087
 
-aws.region=ap-southeast-1
-aws.accesskey=${AWS_ACCESS_KEY}
-aws.secretkey=${AWS_SECRET_KEY}
+spring.cloud.aws.region.static=ap-southeast-1
+spring.cloud.aws.credentials.access-key=${aws_access_key_id}
+spring.cloud.aws.credentials.secret-key=${aws_secret_key_id}
+
 aws.sqs.queue.audit.url=${AUDIT_SQS_URL}
 aws.ses.from=donotreply.edgp@gmail.com
 
@@ -14,4 +15,4 @@ client.invitation.user.url=${CLIENT_INVITATION_USER_URL}
 auth.api.url =${AUTH_URL}
 audit.activity.type.prefix=Notification- 
 
-jwt.public.key=${JWT_PUBLIC_KEY}
+jwt.public.key=${jwt_public_key}
