--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -19,7 +19,7 @@ aws.ses.from=donotreply.edgp@gmail.com
 
 client.url=http://localhost:3000
 client.invitation.user.url=http://localhost:3000/invitation
-auth.api.url =http://localhost:8080/mock-auth
+admin.api.url =http://localhost:8080/mock-auth
 audit.activity.type.prefix=Notification- 
 
 jwt.public.key=bbbb
