--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ aws.ses.from=donotreply.edgp@gmail.com
 
 client.url=${CLIENT_URL}
 client.invitation.user.url=${CLIENT_INVITATION_USER_URL}
-auth.api.url =${AUTH_URL}
+admin.api.url =${ADMIN_URL}
 audit.activity.type.prefix=Notification- 
 
 jwt.public.key=${jwt_public_key}
